# dbdie_api

./: .gitignore  Makefile  README.md  requirements.txt  requirements_test.txt
app/: Dockerfile  __init__.py  alembic.ini  ascii_art.txt  constants.py  main.py  requirements.txt
app/alembic/: env.py
app/alembic/versions/: 3954dfa4f55a_add_offerings_table.py  3c40e02028e4_align_cardinality_and_table_names.py  7a9444ee8c15_add_perks_table.py  8b73a1960cc2_add_status_table.py  a9c8698d2cbd_create_characters_table.py  bc0130a80440_add_items_table.py  be1f67f8a086_add_is_dead_column.py  c741c4bc26e3_add_addons_table.py  e06ff61fada2_add_is_killer_column.py  e1000e0cae9e_add_base_char_id_column_for_legendaries.py
app/backbone/: config.py  database.py  endpoints.py  exceptions.py  io_requests.py  ml.py  mock.py  models.py  sqla.py  utils.py
app/backbone/code/: backup.py  characters.py  cvat_code.py  extract.py  extraction.py  labels.py  matches.py  training.py
app/backbone/models/: groupings.py  helpers.py  objects.py  predictables.py  types.py
app/backbone/options/: ENDPOINTS.py  ML_ENDPOINTS.py  TABLE_NAMES.py
app/backbone/routers/: addons.py  characters.py  cropping.py  cvat_code.py  dbd_version.py  extraction.py  items.py  labels.py  matches.py  offerings.py  perks.py  players.py  predict.py  status.py  statuses.py  tags.py
app/backbone/routers/helpers/: dbd_version.py
app/backbone/routers/objects/: cropper_swarm.py  extractor.py  full_model_types.py  model.py
app/backbone/routers/predictables/: addons.py  character.py  characters.py  item.py  items.py  labels.py  matches.py  offering.py  offerings.py  perks.py  players.py  points.py  prestige.py  rarity.py  status.py  statuses.py
app/backbone/routers/processes/: backup.py  cropping.py  cvat_code.py  extraction.py  training.py
poetry/: pyproject.toml
